fleur: Switch away from KPOC to regular `chargeonlymode`
* Inspired by `begonia` init scripts.

* Xiaomi wanted to make things harder for custom ROM development
  and, along with kernel, audio and IMS, they also made the offline
  charging MIUI-specific. Only CherishOS Android 12 GSI was able to
  handle this properly (probably because they were also shipping
  Xiaomi's `/system/bin/charger`, can't say anything without
  actually checking the source) whereas no other GSI was able to
  handle this _at all_. This change, with which we take advantage
  of MIUI's `charger` binary and override ROM's `charger` service
  to use it, gets it working properly.

* Brightness hack was taken raw from Kshitij Gupta's commit.

Test: Push `{/system_root|}/system/bin/charger` from stock to
      `{/system_root|}/system/bin/chargeonlymode`, add `charger`
      service exactly as this change in board init script,
      optionally add the brightness hack, remove anything related
      to KPOC, power the device off, plug it in and see if ROM's
      own offline charger comes up after OEM splash.

Test: `m otapackage`, flash produced package, power the device off,
      plug it in and see if ROM's own offline charger comes up OEM
      splash.

Co-authored-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: Beru Hinode <windowz414@1337.lgbt>

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -73,3 +73,14 @@ on property:persist.sys.fleur.dt2w=1
 # Restrict permissions to socket file 
     # to hide Magisk & co.
     chmod 440 /proc/net/unix
+
+service charger /system/bin/chargeonlymode
+    class charger
+    critical
+    group system graphics
+    seclabel u:r:healthd:s0
+
+on charger
+    # Turn backlight on and switch to backlight trigger
+    write /sys/class/leds/lcd-backlight/brightness "1000"
+    write /sys/class/leds/lcd-backlight/trigger "backlight"
