--- a/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.rc
@@ -1,5 +1,5 @@
 
-service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.rosemary
+service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.fleur
     # "class hal" causes a race condition on some devices due to files created
     # in /data. As a workaround, postpone startup until later in boot once
     # /data is mounted.
