Import D2TW from Rosemary
Former-commit-id: e6527609be8b71668f3fca5b40aac190f2271652

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -1220,6 +1220,13 @@ on  property:vendor.elliptic.sensor.test=1
 on  property:vendor.elliptic.sensor.test=0
     stop ellipticSensorTest
 
+#DT2W
+on property:persist.sys.rosemary.dt2w=0
+    exec /system/bin/sendevent /dev/input/event2 0 1 4
+
+on property:persist.sys.rosemary.dt2w=1
+    exec /system/bin/sendevent /dev/input/event2 0 1 5
+
 # Kill AOSP RIL
 #on property:vendor.ril.mtk=1
 #    stop vendor.ril-daemon
