--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -1221,10 +1221,10 @@ on  property:vendor.elliptic.sensor.test=0
     stop ellipticSensorTest
 
 #DT2W
-on property:persist.sys.rosemary.dt2w=0
+on property:persist.sys.fleur.dt2w=0
     exec /system/bin/sendevent /dev/input/event2 0 1 4
 
-on property:persist.sys.rosemary.dt2w=1
+on property:persist.sys.fleur.dt2w=1
     exec /system/bin/sendevent /dev/input/event2 0 1 5
 
 # Kill AOSP RIL
