--- a/rro_overlays/CarrierConfigOverlayFleur/AndroidManifest.xml
+++ b/rro_overlays/CarrierConfigOverlayFleur/AndroidManifest.xml
@@ -15,13 +15,10 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.fleur"
-    android:versionCode="1"
-    android:versionName="1.0">
-    <application 
-      android:hasCode="false"/>
+    package="com.android.carrierconfig.fleur">
+    <application android:hasCode="false" />
     <overlay
-      android:targetPackage="com.android.settings"
+      android:targetPackage="com.android.carrierconfig"
       android:isStatic="true"
-      android:priority="1"/>
+      android:priority="0"/>
 </manifest>
