--- a/rootdir/etc/init.mt6781.usb.rc
+++ b/rootdir/etc/init.mt6781.usb.rc
@@ -4,7 +4,7 @@ on early-init
 
 on post-fs
     setprop vendor.usb.vid "0x0E8D"
-    mkdir /dev/usb-ffs 0770 shell shell
+    mkdir /dev/usb-ffs 0775 shell shell
     mkdir /dev/usb-ffs/adb 0770 shell shell
     mkdir /config/usb_gadget/g1 0770 shell shell
     write /config/usb_gadget/g1/idVendor 0x2717
@@ -18,9 +18,9 @@ on post-fs
     mkdir /config/usb_gadget/g1/functions/accessory.gs2
     mkdir /config/usb_gadget/g1/functions/audio_source.gs3
     mkdir /config/usb_gadget/g1/functions/ffs.adb
-    mkdir /config/usb_gadget/g1/functions/mtp.gs0
-    write /config/usb_gadget/g1/functions/mtp.gs0/os_desc/interface.MTP/compatible_id "MTP"
-    mkdir /config/usb_gadget/g1/functions/ptp.gs1
+    mkdir /config/usb_gadget/g1/functions/ffs.mtp
+    write /config/usb_gadget/g1/functions/ffs.mtp/os_desc/interface.MTP/compatible_id "MTP"
+    mkdir /config/usb_gadget/g1/functions/ffs.ptp
     mkdir /config/usb_gadget/g1/functions/rndis.gs4
     mkdir /config/usb_gadget/g1/functions/midi.gs5
     mkdir /config/usb_gadget/g1/functions/acm.gs0
@@ -38,7 +38,11 @@ on post-fs
     write /config/usb_gadget/g1/os_desc/qw_sign "MSFT100"
     write /config/usb_gadget/g1/configs/b.1/MaxPower 500
     symlink /config/usb_gadget/g1/configs/b.1 /config/usb_gadget/g1/os_desc/b.1
-    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    mount functionfs adb /dev/usb-ffs/adb rmode=0770,fmode=0660,uid=2000,gid=2000,no_disconnect=1
+    mkdir /dev/usb-ffs/mtp 0770 mtp mtp
+    mkdir /dev/usb-ffs/ptp 0770 mtp mtp
+    mount functionfs mtp /dev/usb-ffs/mtp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
+    mount functionfs ptp /dev/usb-ffs/ptp rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
 
 on boot
     setprop sys.usb.configfs 1
@@ -75,6 +79,9 @@ on boot
 
     # for usb otg sdcard hot plug detection
     write /sys/module/block/parameters/events_dfl_poll_msecs 1000
+
+on property:dev.bootcomplete=1
+    write /config/usb_gadget/g1/strings/0x409/product ${ro.product.marketname}
 
 on charger
     mkdir /config/usb_gadget/g1 0770 shell shell
@@ -117,9 +124,6 @@ on property:sys.usb.config=hid && property:sys.usb.configfs=1
     symlink /config/usb_gadget/g1/functions/hid.gs0 /config/usb_gadget/g1/configs/b.1/f1
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
-
-on property:dev.bootcomplete=1
-    write /config/usb_gadget/g1/strings/0x409/product ${ro.product.marketname}
 
 ### main function : adb ###
 ### start adbd at init.usb.configfs.rc ###
@@ -167,23 +171,23 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x202A
 
 on property:sys.usb.config=mtp && property:vendor.usb.acm_enable=1 && \
-property:sys.usb.configfs=1
+property:sys.usb.configfs=1 && property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_acm"
     write /config/usb_gadget/g1/idProduct 0xFF44
     write /config/usb_gadget/g1/os_desc/use 1
     write /sys/devices/platform/mt_usb/saving 1
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=mtp && property:vendor.usb.acm_enable=0 && \
-property:sys.usb.configfs=1
+property:sys.usb.configfs=1 && property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp"
     write /config/usb_gadget/g1/idProduct 0xFF40
     write /config/usb_gadget/g1/os_desc/use 1
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
 
@@ -200,12 +204,13 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x2026
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=mtp,adb && \
-property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
+property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_adb_acm"
     write /config/usb_gadget/g1/idProduct 0xFF4C
     write /config/usb_gadget/g1/os_desc/use 1
     write /sys/devices/platform/mt_usb/saving 1
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f4
@@ -213,11 +218,12 @@ property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=mtp,adb && \
-property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1
+property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.mtp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_adb"
     write /config/usb_gadget/g1/idProduct 0xFF48
     write /config/usb_gadget/g1/os_desc/use 1
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
@@ -235,21 +241,21 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x202B
 
 on property:sys.usb.config=ptp && property:vendor.usb.acm_enable=1 && \
-property:sys.usb.configfs=1
+property:sys.usb.configfs=1 && property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_acm"
     write /config/usb_gadget/g1/idProduct 0xFF14
     write /sys/devices/platform/mt_usb/saving 1
-    symlink /config/usb_gadget/g1/functions/ptp.gs1 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f3
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=ptp && property:vendor.usb.acm_enable=0 && \
-property:sys.usb.configfs=1
+property:sys.usb.configfs=1 && property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp"
     write /config/usb_gadget/g1/idProduct 0xFF10
-    symlink /config/usb_gadget/g1/functions/ptp.gs1 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
 
@@ -266,11 +272,12 @@ property:sys.usb.configfs=1
     setprop vendor.usb.pid 0x2027
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=ptp,adb && \
-property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
+property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_adb_acm"
     write /config/usb_gadget/g1/idProduct 0xFF1C
     write /sys/devices/platform/mt_usb/saving 1
-    symlink /config/usb_gadget/g1/functions/ptp.gs1 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port0} /config/usb_gadget/g1/configs/b.1/f3
     symlink /config/usb_gadget/g1/functions/acm.gs${vendor.usb.acm_port1} /config/usb_gadget/g1/configs/b.1/f4
@@ -278,10 +285,11 @@ property:vendor.usb.acm_enable=1 && property:sys.usb.configfs=1
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.ffs.ready=1 && property:sys.usb.config=ptp,adb && \
-property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1
+property:vendor.usb.acm_enable=0 && property:sys.usb.configfs=1 && \
+property:vendor.usb.ffs.ptp.ready=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "ptp_adb"
     write /config/usb_gadget/g1/idProduct 0xFF18
-    symlink /config/usb_gadget/g1/functions/ptp.gs1 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.ptp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
@@ -770,7 +778,7 @@ property:vendor.usb.clear=2 && property:sys.usb.configfs=1
     write /sys/class/udc/musb-hdrc/device/saving 1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "atm_gs0"
     write /config/usb_gadget/g1/idProduct 0x200A
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs0 /config/usb_gadget/g1/configs/b.1/f3
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
@@ -796,7 +804,7 @@ property:vendor.usb.clear=2 && property:sys.usb.configfs=1
     setprop vendor.usb.acm_enable 1
     write /sys/class/udc/musb-hdrc/device/saving 1
     write /config/usb_gadget/g1/idProduct 0x2026
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/acm.gs0 /config/usb_gadget/g1/configs/b.1/f3
     symlink /config/usb_gadget/g1/functions/acm.gs3 /config/usb_gadget/g1/configs/b.1/f4
@@ -811,7 +819,7 @@ on property:sys.usb.config=cdp && property:sys.usb.configfs=1
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp"
     write /config/usb_gadget/g1/idProduct 0x2008
     write /config/usb_gadget/g1/os_desc/use 1
-    symlink /config/usb_gadget/g1/functions/mtp.gs0 /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
     write /config/usb_gadget/g1/UDC ${vendor.usb.controller}
     setprop sys.usb.state ${sys.usb.config}
     setprop vendor.usb.pid 0x2008
@@ -846,19 +854,19 @@ on property:vendor.usb.port.mode=uart
 	write /sys/devices/platform/mt_usb/portmode 1
 
 on property:vendor.em.usb.set=USB_DRIVING_CAPABILITY
-	write /sys/kernel/debug/usb20_phy/USB_DRIVING_CAPABILITY ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/USB_DRIVING_CAPABILITY ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_TERM_VREF_SEL
-	write /sys/kernel/debug/usb20_phy/RG_USB20_TERM_VREF_SEL ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_TERM_VREF_SEL ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_HSTX_SRCTRL
-	write /sys/kernel/debug/usb20_phy/RG_USB20_HSTX_SRCTRL ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_HSTX_SRCTRL ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_VRT_VREF_SEL
-	write /sys/kernel/debug/usb20_phy/RG_USB20_VRT_VREF_SEL ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_VRT_VREF_SEL ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_INTR_EN
-	write /sys/kernel/debug/usb20_phy/RG_USB20_INTR_EN ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_INTR_EN ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_PHY_REV6
-	write /sys/kernel/debug/usb20_phy/RG_USB20_PHY_REV6 ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_PHY_REV6 ${vendor.em.usb.value}
 on property:vendor.em.usb.set=RG_USB20_DISCTH
-	write /sys/kernel/debug/usb20_phy/RG_USB20_DISCTH ${vendor.em.usb.value}
+	write /proc/mtk_usb/usb20_phy/RG_USB20_DISCTH ${vendor.em.usb.value}
 
 on property:vendor.em.usb.bypass.enable=0
 	write /sys/class/usb_rawbulk/gps/enable 1
@@ -898,4 +906,14 @@ on property:vendor.usb.printk=*
 on property:persist.vendor.usb.printk=*
 	setprop vendor.usb.printk ${persist.vendor.usb.printk}
 
+on property:vendor.usb.testmode=0
+	write /proc/mtk_usb/testmode "0"
+on property:vendor.usb.testmode=1
+	write /proc/mtk_usb/testmode "test SE0 NAK"
+on property:vendor.usb.testmode=2
+	write /proc/mtk_usb/testmode "test J"
+on property:vendor.usb.testmode=3
+	write /proc/mtk_usb/testmode "test K"
+on property:vendor.usb.testmode=4
+	write /proc/mtk_usb/testmode "test packet"
 ### PLATFORM VARIANT, cat $rc_file | grep write | sort | grep -vE "android0|usb20_phy" | awk '{print $2}' | uniq ###
