--- a/rootdir/etc/meta_init.rc
+++ b/rootdir/etc/meta_init.rc
@@ -8,17 +8,21 @@ import /init.environ.rc
 import /vendor/etc/init/hw/init.aee.rc
 import /system_ext/etc/init/hw/init.aee.rc
 import /system/etc/init/update_verifier.rc
-import /vendor/etc/init/android.hardware.boot@1.1-service.rc
-import /vendor/etc/init/android.hardware.boot@1.1-service-lazy.rc
+import /vendor/etc/init/android.hardware.boot@1.2-service.rc
+import /vendor/etc/init/android.hardware.boot@1.2-service-lazy.rc
 import /vendor/etc/init/trustonic.rc
 import ${ro.vendor.rc}meta_init.connectivity.rc
 import /vendor/etc/init/hw/meta_init.project.rc
 import /vendor/etc/init/microtrust.rc
 import /vendor/etc/init/vendor.microtrust.hardware.capi@2.0-service.rc
 import /vendor/etc/init/android.hardware.keymaster@4.0-service.beanpod.rc
+import /vendor/etc/init/android.hardware.keymaster@4.1-service.beanpod.rc
 import /vendor/etc/init/microtrust.bp_kmsetkey_ca.rc
 import /vendor/etc/init/vendor.microtrust.hardware.thh@2.0-service.rc
 import /vendor/etc/init/microtrust.init_thh.rc
+import /vendor/etc/init/android.hardware.boot@1.1-service.rc
+import /vendor/etc/init/android.hardware.boot@1.1-service-lazy.rc
+
 #copy from system/etc for APEX
 import /system/etc/init/apexd.rc
 import /system/etc/init/art_apex_boot_integrity.rc
@@ -53,7 +57,7 @@ on early-init
     mkdir /linkerconfig/default 0755
 
     # Generate ld.config.txt for early executed processes
-    exec -- /system/bin/linkerconfig --target /linkerconfig/bootstrap
+    exec -- /system/bin/bootstrap/linkerconfig --target /linkerconfig/bootstrap
     chmod 644 /linkerconfig/bootstrap/ld.config.txt
     copy /linkerconfig/bootstrap/ld.config.txt /linkerconfig/default/ld.config.txt
     chmod 644 /linkerconfig/default/ld.config.txt
@@ -66,6 +70,9 @@ on early-init
     # become available. Note that this is executed as exec_start to ensure that
     # the libraries are available to the processes started after this statement.
     exec_start apexd-bootstrap
+
+    # Generate linker config based on apex mounted in bootstrap namespace
+    update_linker_config
 
 #INTERNAL_START
     mount debugfs debugfs /sys/kernel/debug
@@ -151,7 +158,7 @@ on init
     mount configfs none /config nodev noexec nosuid
     chmod 0770 /config/sdcardfs
     chown system package_info /config/sdcardfs
-	
+
     # Mount binderfs
     mkdir /dev/binderfs
     mount binder binder /dev/binderfs stats=global
@@ -348,7 +355,7 @@ on fs
 #INTERNAL_START
     write /proc/bootprof "INIT:Mount_START"
     wait_for_prop hwservicemanager.ready "true"
-    start vendor.boot-hal-1-1
+    start vendor.boot-hal-1-2
     mount_all --early
     write /proc/bootprof "INIT:Mount_END"
 #INTERNAL_END
@@ -356,8 +363,8 @@ on fs
 on post-fs
     start logd
     start keyinstall-1-0
-    start light-hal-2-0
-    start vendor.boot-hal-1-1
+    start vendor.light-default
+    start vendor.boot-hal-1-2
     start merged_hal_service
     start system_suspend
     # Once everything is setup, no need to modify /.
@@ -417,11 +424,15 @@ on post-fs
 
 on late-fs
     wait_for_prop hwservicemanager.ready "true"
+    start keystore2
     start vendor.keymaster-3-0
     start vendor.keymaster-3-0-trustonic
     start vendor.keymaster-4-0
     start vendor.keymaster-4-0-trustonic
     start vendor.keymaster-4-0-beanpod
+    start vendor.keymaster-4-1
+    start vendor.keymaster-4-1-trustonic
+    start vendor.keymaster-4-1-beanpod
     start keymaster_attestation-1-1
     exec_start wait_for_keymaster
     mount_all --late
@@ -478,6 +489,7 @@ on boot
     # For backlight
     chmod 0664 /sys/class/leds/lcd-backlight/brightness
     chown system system /sys/class/leds/lcd-backlight/brightness
+    write /sys/class/leds/vibrator/trigger "transient"
 
 # basic network init
     ifup lo
@@ -611,7 +623,24 @@ service loghidlsysservice /system/bin/loghidlsysservice
     group system shell radio
 
 service meta_tst /vendor/bin/meta_tst
+    user root
     group radio system wifi audio bluetooth media gps
+    socket meta-atci stream 660 radio system
+
+service factory_no_image /vendor/bin/factory
+    user root
+    group radio system wifi media gps audio bluetooth wakelock nfc
+    capabilities BLOCK_SUSPEND NET_RAW NET_ADMIN SYS_ADMIN SYS_BOOT
+    socket factory-atci stream 660 radio system	
+
+service atcid-daemon-u /vendor/bin/atcid
+    interface vendor.mediatek.hardware.atci@1.0::IAtcid default
+    class hal
+    class core
+    socket adb_atci_socket stream 660 radio system
+    user root
+    group radio system
+    oneshot
 
 service nvram_daemon /vendor/bin/nvram_daemon
     class main
@@ -634,6 +663,9 @@ service fuelgauged /vendor/bin/fuelgauged
     user system
     group system
 
+on property:vendor.mtk.factory.start=1
+    stop factory_no_image
+    start factory_no_image
 #META+ADB
 on property:ro.boot.usbconfig=0 && property:sys.usb.configfs=1
     write /proc/bootprof "INIT:start adbd"
