--- a/rootdir/etc/init.mediatek.rc
+++ b/rootdir/etc/init.mediatek.rc
@@ -62,7 +62,13 @@ on property:persist.vendor.radio.port_index=""
     
 on property:sys.boot_completed=1
     # force disable hw overlays to be true
-    exec - root -- /system/bin/sh -c "service call SurfaceFlinger 1008 i32 1" 
+    exec - root -- /system/bin/sh -c "service call SurfaceFlinger 1008 i32 1"
+
+on property:persist.sys.fleur.dt2w=0
+    write /proc/tp_gesture 0
+
+on property:persist.sys.fleur.dt2w=1
+    write /proc/tp_gesture 1
 
 # Restrict permissions to socket file 
     # to hide Magisk & co.
