--- a/rootdir/etc/init.mediatek.rc
+++ b/rootdir/etc/init.mediatek.rc
@@ -1,6 +1,9 @@
 on init
     setprop sys.usb.ffs.aio_compat 1
     setprop persist.vendor.vilte_support 0
+    mount none /system/etc/audio_device.xml /vendor/etc/audio_device.xml bind
+    mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio_policy_configuration.xml bind
+    mount none /system/lib/hw/audio.primary.mt6781.so /vendor/init/hw/audio.primary.mt6781.so bind
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
