--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -3,7 +3,7 @@ on init
     setprop persist.vendor.vilte_support 0
     mount none /system/etc/audio_device.xml /vendor/etc/audio_device.xml bind
     mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio_policy_configuration.xml bind
-    mount none /system/lib/hw/audio.primary.mt6781.so /vendor/init/hw/audio.primary.mt6781.so bind
+    mount none /system/lib/hw/audio.primary.mt6781.so /vendor/lib/hw/audio.primary.mt6781.so bind
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
