--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -4,6 +4,7 @@ on init
     mount none /system/etc/audio_device.xml /vendor/etc/audio_device.xml bind
     mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio_policy_configuration.xml bind
     mount none /system/lib/hw/audio.primary.mt6781.so /vendor/lib/hw/audio.primary.mt6781.so bind
+    mount none /vendor/lost+found /vendor/overlay bind
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
