fleur: Set swappiness to a lower value of 60 * Setting swappiness to 100 cause aggressive swap writing which   further leads to unusual lags
Signed-off-by: ShazuxD <shazuxd@proton.me>

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -77,3 +77,8 @@ on charger
     # Turn backlight on and switch to backlight trigger
     write /sys/class/leds/lcd-backlight/brightness "1000"
     write /sys/class/leds/lcd-backlight/trigger "backlight"
+
+
+# ZRAM
+on property:sys.boot_completed=1
+        write /proc/sys/vm/swappiness 60
