fleur: Enable suspend to RAM Improves idle drain considerably.
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>
Signed-off-by: ShazuxD <shazuxd@proton.me>

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -82,3 +82,4 @@ on charger
 # ZRAM
 on property:sys.boot_completed=1
         write /proc/sys/vm/swappiness 60
+        write /sys/power/mem_sleep "deep"
