fleur: Add blkio tuning from sunfish
Signed-off-by: xNombre <kartapolska@gmail.com>
Change-Id: Id8a6ef29c85c94dab17d590918e80837bc84838d
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>
Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>
Signed-off-by: ShazuxD <shazuxd@proton.me>

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -83,3 +83,9 @@ on charger
 on property:sys.boot_completed=1
         write /proc/sys/vm/swappiness 60
         write /sys/power/mem_sleep "deep"
+
+# Setup runtime blkio
+    write /dev/blkio/blkio.weight 1000
+    write /dev/blkio/background/blkio.weight 200
+    write /dev/blkio/blkio.group_idle 2000
+    write /dev/blkio/background/blkio.group_idle 0
