--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -1,4 +1,6 @@
 on init
+    mount none /vendor/lost+found /vendor/overlay bind
+    setprop sys.usb.ffs.aio_compat 1
 
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
