--- a/rro_overlays/SimpleDeviceConfigOverlayfleur/AndroidManifest.xml
+++ b/rro_overlays/SimpleDeviceConfigOverlayfleur/AndroidManifest.xml
@@ -11,7 +11,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.protonaosp.deviceconfig.overlay.veux">
+    package="org.protonaosp.deviceconfig.overlay.fleur">
 
     <application android:hasCode="false" />
     <overlay
