--- a/recovery/root/init.recovery.mt6781.rc
+++ b/recovery/root/init.recovery.mt6781.rc
@@ -12,7 +12,7 @@ on init
 
 on fs && property:ro.debuggable=0
     # distinguish USB shoulde connect or not, i.e. CDP vs SDP
-    # write /sys/class/udc/musb-hdrc/device/cmode 2
+    write /sys/class/udc/musb-hdrc/device/cmode 2
     # set charging free due to it wait for USB activation
     start adbd
 
@@ -37,3 +37,4 @@ on post-fs
     symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
     symlink /dev/block/mapper/pl_a /dev/block/platform/bootdevice/by-name/preloader_raw_a
     symlink /dev/block/mapper/pl_b /dev/block/platform/bootdevice/by-name/preloader_raw_b
+
