Fleur: rootdir: Stop bootanimation service after boot
* Some users reported bootanimation lags and freezes after a while. Looking from logs it fails to exit once boot is completed. Stopping bootanimation service, as workaround, is preventing this issue.

Signed-off-by: Rohit Tiwari <rohitttiwari52@gmail.com>

--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -20,6 +20,9 @@ on property:init.svc.face_hal=restarting
     stop face_hal
 
 on property:sys.boot_completed=1
+    #Stop bootanimation
+    stop bootanim
+
     # USB-OTG
     chown system system /sys/class/power_supply/usb/otg_switch
     chmod 0666 /sys/class/power_supply/usb/otg_switch
