--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -78,10 +78,13 @@ on property:persist.sys.fleur.dt2w=1
 
 service charger /system/bin/charger
     class charger
-    critical
-    group system graphics
+    user system
+    group system graphics wakelock input
     capabilities SYS_BOOT
-    seclabel u:r:charger:s0
+    file /dev/kmsg w
+    file /sys/fs/pstore/console-ramoops-0 r
+    file /sys/fs/pstore/console-ramoops r
+    file /proc/last_kmsg r
 
 on charger
     # Turn backlight on and switch to backlight trigger
