--- a/rro_overlays/FrameworksResOverlayX695C/AndroidManifest.xml
+++ b/rro_overlays/FrameworksResOverlayX695C/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 The Android Open Source Project
+<!-- Copyright (C) 2022 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,15 +13,15 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.providers.settings.fleur"
+    package="com.android.frameworkres.overlay.X695C"
     android:versionCode="1"
     android:versionName="1.0">
-    <application android:hasCode="false" />
+    <application 
+      android:hasCode="false"/>
     <overlay
-      android:targetPackage="com.android.providers.settings"
-      android:requiredSystemPropertyName="ro.boot.product.vendor.sku"
-      android:requiredSystemPropertyValue="fleur"
+      android:targetPackage="android"
       android:isStatic="true"
-      android:priority="0"/>
+      android:priority="1"/>
 </manifest>
