--- a/rro_overlays/SettingsOverlayX695C/AndroidManifest.xml
+++ b/rro_overlays/SettingsOverlayX695C/AndroidManifest.xml
@@ -15,14 +15,13 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.networkstack.tethering.fleur"
+    package="com.android.settings.overlay.X695C"
     android:versionCode="1"
     android:versionName="1.0">
     <application 
       android:hasCode="false"/>
     <overlay
-      android:targetPackage="com.android.networkstack.tethering"
-      android:targetName="TetheringConfig"
+      android:targetPackage="com.android.settings"
       android:isStatic="true"
-      android:priority="0"/>
+      android:priority="1"/>
 </manifest>
