--- a/rro_overlays/SystemUIOverlayX695C/AndroidManifest.xml
+++ b/rro_overlays/SystemUIOverlayX695C/AndroidManifest.xml
@@ -15,13 +15,13 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.fleur"
+    package="com.android.systemui.overlay.X695C"
     android:versionCode="1"
     android:versionName="1.0">
     <application 
       android:hasCode="false"/>
     <overlay
-      android:targetPackage="com.android.settings"
+      android:targetPackage="com.android.systemui"
       android:isStatic="true"
       android:priority="1"/>
 </manifest>
