--- a/rro_overlays/X695CSettingsProviderOverlay/AndroidManifest.xml
+++ b/rro_overlays/X695CSettingsProviderOverlay/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2022 PixelExpereince
+<!-- Copyright (C) 2019 The Android Open Source Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -11,11 +14,14 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.protonaosp.deviceconfig.overlay.fleur">
-
+    package="com.android.providers.settings.X695C"
+    android:versionCode="1"
+    android:versionName="1.0">
     <application android:hasCode="false" />
     <overlay
-      android:targetPackage="org.protonaosp.deviceconfig"
+      android:targetPackage="com.android.providers.settings"
+      android:requiredSystemPropertyName="ro.boot.product.vendor.sku"
+      android:requiredSystemPropertyValue="X695C"
       android:isStatic="true"
-      android:priority="1"/>
+      android:priority="0"/>
 </manifest>
