--- a/dt2w/AndroidManifest.xml
+++ b/dt2w/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.potatoproject.dt2w.x6827"
+    package="co.potatoproject.dt2w.X695C"
     android:versionCode="1"
     android:versionName="1.0"
     android:sharedUserId="android.uid.system">
@@ -18,6 +18,6 @@
             </intent-filter>
         </receiver>
 
-        <service android:enabled="true" android:name=".DT2WServicex6827" />
+        <service android:enabled="true" android:name=".DT2WServiceX695C" />
     </application>
 </manifest>
