--- a/rro_overlays/WifiOverlayx6827/AndroidManifest.xml
+++ b/rro_overlays/WifiOverlayx6827/AndroidManifest.xml
@@ -15,7 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.wifi.resources.x6827"
+    package="com.android.wifi.resources.X695C"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
